cmake_minimum_required(VERSION 3.19)
project(operating_system)

set(CMAKE_CXX_STANDARD 14)

include_directories(HW1)
include_directories(HW2/spim/CPU)
include_directories(HW2/spim/PCSpim)
include_directories(HW2/spim/QtSpim)
include_directories(HW2/spim/spim)
include_directories(HW2/spim/xspim)

add_executable(operating_system
        HW1/shell.c
        HW1/syscall.cpp
        HW1/syscall.h
        HW1/test.c
        HW2/spim/CPU/data.cpp
        HW2/spim/CPU/data.h
        HW2/spim/CPU/display-utils.cpp
        HW2/spim/CPU/dump_ops.cpp
        HW2/spim/CPU/inst.cpp
        HW2/spim/CPU/inst.h
        HW2/spim/CPU/mem.cpp
        HW2/spim/CPU/mem.h
        HW2/spim/CPU/op.h
        HW2/spim/CPU/parser.h
        HW2/spim/CPU/reg.h
        HW2/spim/CPU/run.cpp
        HW2/spim/CPU/run.h
        HW2/spim/CPU/scanner.h
        HW2/spim/CPU/spim-syscall.h
        HW2/spim/CPU/spim-utils.cpp
        HW2/spim/CPU/spim-utils.h
        HW2/spim/CPU/spim.h
        HW2/spim/CPU/string-stream.cpp
        HW2/spim/CPU/syscall.cpp
        HW2/spim/CPU/syscall.h
        HW2/spim/CPU/string-stream.h
        HW2/spim/CPU/sym-tbl.cpp
        HW2/spim/CPU/sym-tbl.h
        HW2/test/syscall.cpp
        HW2/test/syscall.h
        HW2/spim/CPU/version.h
        HW2/spim/PCSpim/BreakpointDlg.cpp
        HW2/spim/PCSpim/BreakpointDlg.h
        HW2/spim/PCSpim/ConsoleWnd.cpp
        HW2/spim/PCSpim/ConsoleWnd.h
        HW2/spim/PCSpim/MainFrm.cpp
        HW2/spim/PCSpim/MainFrm.h
        HW2/spim/PCSpim/MultiStepDlg.cpp
        HW2/spim/PCSpim/MultiStepDlg.h
        HW2/spim/PCSpim/PCSpim.cpp
        HW2/spim/PCSpim/PCSpim.h
        HW2/spim/PCSpim/PCSpimDoc.cpp
        HW2/spim/PCSpim/PCSpimDoc.h
        HW2/spim/PCSpim/PCSpimView.cpp
        HW2/spim/PCSpim/PCSpimView.h
        HW2/spim/PCSpim/Regman.cpp
        HW2/spim/PCSpim/Regman.h
        HW2/spim/PCSpim/resource.h
        HW2/spim/PCSpim/RunDlg.cpp
        HW2/spim/PCSpim/RunDlg.h
        HW2/spim/PCSpim/SettingsDlg.cpp
        HW2/spim/PCSpim/SettingsDlg.h
        HW2/spim/PCSpim/SetValueDlg.cpp
        HW2/spim/PCSpim/SetValueDlg.h
        HW2/spim/PCSpim/SpimReg.h
        HW2/spim/PCSpim/SpimSupport.cpp
        HW2/spim/PCSpim/StdAfx.cpp
        HW2/spim/PCSpim/StdAfx.h
        HW2/spim/PCSpim/util.cpp
        HW2/spim/PCSpim/util.h
        HW2/spim/QtSpim/console.cpp
        HW2/spim/QtSpim/console.h
        HW2/spim/QtSpim/datatextedit.h
        HW2/spim/QtSpim/datawin.cpp
        HW2/spim/QtSpim/main.cpp
        HW2/spim/QtSpim/menu.cpp
        HW2/spim/QtSpim/parser_yacc.cpp
        HW2/spim/QtSpim/parser_yacc.h
        HW2/spim/QtSpim/regtextedit.h
        HW2/spim/QtSpim/regwin.cpp
        HW2/spim/QtSpim/scanner_lex.cpp
        HW2/spim/QtSpim/settablecheckbox.h
        HW2/spim/QtSpim/spim_settings.h
        HW2/spim/QtSpim/spim_support.cpp
        HW2/spim/QtSpim/spimview.cpp
        HW2/spim/QtSpim/spimview.h
        HW2/spim/QtSpim/state.cpp
        HW2/spim/QtSpim/texttextedit.h
        HW2/spim/QtSpim/textwin.cpp
        HW2/spim/spim/lex.yy.cpp
        HW2/spim/spim/parser_yacc.cpp
        HW2/spim/spim/parser_yacc.h
        HW2/spim/spim/spim.cpp
        HW2/spim/xspim/buttons.c
        HW2/spim/xspim/buttons.h
        HW2/spim/xspim/windows.c
        HW2/spim/xspim/windows.h
        HW2/spim/xspim/xspim.c
        HW2/spim/xspim/xspim.h
        Practices/hw1/bubble_sort.c
        Practices/hw1/factors.c
        Practices/hw1/show_primes.c
        Practices/hw1/test.c)
